# repo-intelligence

./: .gitignore  README.md  pyproject.toml
docs/: chatgptresearch.md  clauderesearch.md  current-focus.md  eval_cases.change_radar.json  eval_cases.example.json  evals.md  geminiresearch.md  mcp.md  product.md  roadmap.md
docs/adr/: 0001-product-direction.md
docs/benchmarks/: working-set-benchmark-20260413T093712Z.json  working-set-benchmark-20260413T093712Z.md  working-set-benchmark-20260413T094151Z.json  working-set-benchmark-20260413T094151Z.md  working-set-benchmark-20260413T094404Z.json  working-set-benchmark-20260413T094404Z.md
examples/: mcp.json.example
src/change_radar/: __init__.py  cli.py  config.py  mcp_server.py  serialization.py  types.py
src/change_radar/analysis/: diff.py  impact.py  preflight.py  status.py  symbol.py
src/change_radar/evals/: working_set.py
src/change_radar/git/: diff.py  history.py
src/change_radar/index/: __init__.py  service.py
src/change_radar/parsers/: __init__.py  js_ts.py  python.py  service.py
src/change_radar/ranking/: task.py
src/change_radar/reports/: evals.py  markdown.py
src/change_radar/scanner/: __init__.py  git.py  (+1 more)
tests/integration/: test_benchmark_working_set.py  test_cli_json_output.py  test_diff_analysis.py  test_index_repository.py
tests/unit/: test_git_diff.py  test_git_history.py  test_js_ts_parser.py  test_mcp_server.py  test_preflight.py  test_prompt_pack.py  test_python_parser.py  test_repo_status.py  test_scanner.py  test_symbol_analysis.py  test_task_ranking.py  test_working_set_eval.py
(+1 files in other folders)
