[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "change-radar"
version = "0.1.0"
description = "Local-first repo intelligence for safe AI-assisted code changes."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Change Radar Contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
change-radar = "change_radar.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
